Add OCR pipeline image and update documentation

--- a/sections/subsections/ocr.tex
+++ b/sections/subsections/ocr.tex
@@ -1,1 +1,8 @@
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\textwidth]{img/ocr_pipeline.png}
+    \caption{OCR Pipeline}
+    \label{fig:ocr_pipeline}
+\end{figure}
+
 To translate the visual content of speech bubbles into machine-readable text, we integrate the \textbf{MangaOCR} framework. While general-purpose OCR engines (e.g., Tesseract) struggle with the non-linear layout and unique typography of Japanese manga, MangaOCR is specifically architected to handle vertical text, \textbf{furigana} (pronunciation guides), and mixed writing systems.
