--- a/references.bib
+++ b/references.bib
@@ -332,3 +332,22 @@
 }
 
 
+@inproceedings{Rigaud2013ActiveContour,
+  author       = {Rigaud, Christophe and Burie, Jean-Christophe and Ogier, Jean-Marc and Karatzas, Dimosthenis and van de Weijer, Joost},
+  title        = {An Active Contour Model for Speech Balloon Detection in Comics},
+  booktitle    = {Proceedings of the 2013 12th International Conference on Document Analysis and Recognition (ICDAR)},
+  year         = {2013},
+  pages        = {1240--1244},
+  doi          = {10.1109/ICDAR.2013.251},
+  url          = {https://hal.science/hal-00879816/file/2013_Rigaud_An_active_contour_model_for_speech_balloon_detection_in_comics.pdf}
+}
+
+@article{AraiTolle2011RealTimeTextExtraction,
+  author    = {Arai, Kohei and Tolle, Herman},
+  title     = {Method for Real Time Text Extraction of Digital Manga Comic},
+  journal   = {International Journal of Image Processing (IJIP)},
+  volume    = {4},
+  number    = {6},
+  pages     = {669--676},
+  year      = {2011}
+}
