--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[13pt]{article}
 \usepackage[a4paper, tmargin=1.5cm, lmargin=1.5cm, rmargin=1.5cm, bmargin=1.5cm]{geometry}
 \usepackage{hyperref}
 %\usepackage{multicol}
@@ -85,7 +85,7 @@
 \newpage 
 \addtocontents{toc}{\protect\setcounter{tocdepth}{-1}}
 \section*{List of Abbreviations}
-\addtocontents{toc}{\protect\setcounter{tocdepth}{2}}
+\addtocontents{toc}{\protect\setcounter{tocdepth}{3}}
 \begin{table}[H]
     \centering
     \large 
@@ -118,7 +118,7 @@
 \addtocontents{toc}{\protect\setcounter{tocdepth}{-1}}
 \centering 
 \section*{Abstract}
-\addtocontents{toc}{\protect\setcounter{tocdepth}{2}}
+\addtocontents{toc}{\protect\setcounter{tocdepth}{3}}
 \input{sections/abstract}
 
 \raggedright
