--- a/references.bib
+++ b/references.bib
@@ -351,3 +351,42 @@
   pages     = {669--676},
   year      = {2011}
 }
+
+@inproceedings{Liu2015ClumpSplitting,
+  title={A clump splitting based method to localize speech balloons in comics},
+  author={X. Liu and Y. Wang and Z. Tang},
+  booktitle={2015 13th International Conference on Document Analysis and Recognition (ICDAR)},
+  pages={901--905},
+  year={2015},
+  doi={10.1109/ICDAR.2015.7333892}
+}
+
+@inproceedings{Ranjini2012TwoBlobsComic,
+  author    = {S. Ranjini and M. Sundaresan},
+  title     = {Text Extraction from Digital English Comic Image Using Two Blobs Extraction Method},
+  booktitle = {2012 International Conference on Computing, Communication and Applications (ICCCA)},
+  pages     = {1--5},
+  year      = {2012},
+  doi       = {10.1109/CCAA.2012.6208388},
+}
+
+@inproceedings{Aramaki2016TextDetectionManga,
+  author    = {Yusuke Aramaki and Yusuke Matsui and Toshihiko Yamasaki and Kiyoharu Aizawa},
+  title     = {Text Detection in Manga by Combining Connected-Component-Based and Region-Based Classifications},
+  booktitle = {2016 IEEE International Conference on Image Processing (ICIP)},
+  year      = {2016},
+  pages     = {2901--2905},
+  publisher = {IEEE},
+  doi       = {10.1109/ICIP.2016.7532890}
+}
+
+@inproceedings{Kinugawa2024WMTNonRepetitive,
+  author    = {Kinugawa, Kazuki and Mino, Hiroki and Goto, Isao and Shirai, Norihiro},
+  title     = {Findings of the WMT 2024 Shared Task on Non-Repetitive Translation},
+  booktitle = {Proceedings of the Ninth Conference on Machine Translation (WMT 2024)},
+  year      = {2024},
+  pages     = {715--727},
+  publisher = {Association for Computational Linguistics},
+  address   = {Miami, Florida, USA},
+  url       = {https://www2.statmt.org/wmt24/pdf/2024.wmt-1.60.pdf}
+}
