Add NLP metrics for OCR and translation evaluation, including COMETScore and BERTScore. Add citation for NLP metric

--- a/references.bib
+++ b/references.bib
@@ -390,3 +390,47 @@
   address   = {Miami, Florida, USA},
   url       = {https://www2.statmt.org/wmt24/pdf/2024.wmt-1.60.pdf}
 }
+
+% NLP Metrics
+@inproceedings{rei2022comet,
+  title={COMET-22: Unbabel-IST 2022 Submission for the Metrics Shared Task},
+  author={Rei, Ricardo and de Souza, Jos{\'e} G. C. and Alves, Duarte M. and Zerva, Chrysoula and Farinha, Ana C and Glushkova, Taisiya and Lavie, Alon and Coheur, Luisa and Martins, Andr{\'e} F. T.},
+  booktitle={Proceedings of the Seventh Conference on Machine Translation (WMT)},
+  pages={578--585},
+  year={2022},
+  publisher={Association for Computational Linguistics},
+  address={Abu Dhabi, United Arab Emirates},
+  url={https://aclanthology.org/2022.wmt-1.52/}
+}
+
+@inproceedings{zhang2020bertscore,
+  title={BERTScore: Evaluating Text Generation with BERT},
+  author={Zhang, Tianyi and Kishore, Varsha and Wu, Felix and Weinberger, Kilian Q. and Artzi, Yoav},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2020},
+  url={https://openreview.net/forum?id=SkeHuCVFDr}
+}
+
+@inproceedings{popovic2015chrf,
+  title={chrF: character n-gram F-score for automatic MT evaluation},
+  author={Popovi{\'c}, Maja},
+  booktitle={Proceedings of the Tenth Workshop on Statistical Machine Translation},
+  pages={392--395},
+  year={2015},
+  publisher={Association for Computational Linguistics},
+  address={Lisbon, Portugal},
+  doi={10.18653/v1/W15-3049},
+  url={https://aclanthology.org/W15-3049/}
+}
+
+@inproceedings{popovic2017chrf++,
+  title={chrF++: words helping character n-grams},
+  author={Popovi{\'c}, Maja},
+  booktitle={Proceedings of the Second Conference on Machine Translation},
+  pages={612--618},
+  year={2017},
+  publisher={Association for Computational Linguistics},
+  address={Copenhagen, Denmark},
+  doi={10.18653/v1/W17-4770},
+  url={https://aclanthology.org/W17-4770/}
+}
